json: Get rid of jsoncpp, use JSON for Modern C++.
There was still some left which relied on jsoncpp. This has finally
been adapted to employ Lohmann's JSON for Modern C++ library. Much
better API, much less fuss.

Seems like there was also a bug in the code where the value of some
JSON key was accessed after swapping it out with a different value.
Fixed while converting the swap() calls to move semantics.

Change-Id: I92cec970b181ec69f162877c918e5a4ffb7e0016

--- a/configure.ac
+++ b/configure.ac
@@ -67,7 +67,7 @@ AC_CHECK_COVERAGE
 [ac_cv_use_cutter=no])
 
 # Checks for libraries.
-PKG_CHECK_MODULES([DCPD_DEPENDENCIES], [gmodule-2.0 gio-2.0 gio-unix-2.0 gthread-2.0 jsoncpp >= 1.6.0])
+PKG_CHECK_MODULES([DCPD_DEPENDENCIES], [gmodule-2.0 gio-2.0 gio-unix-2.0 gthread-2.0])
 
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h limits.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h syslog.h unistd.h])
