general: Fix warnings about dedicated C99 features.
Warnings about use of designated initializers and variable length
arrays have been fixed. While the loss of designated initializers is
kind of a pity (only available in C++20), the code around variable
length arrays looks much better and safer now.

Change-Id: I2df4051763d26005af48789677189bbcb4ce43a2

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2015--2019  T+A elektroakustik GmbH & Co. KG
+# Copyright (C) 2015--2020  T+A elektroakustik GmbH & Co. KG
 #
 # This file is part of DCPD.
 #
@@ -173,7 +173,7 @@ libconfigproxy_la_SOURCES = configproxy.c configproxy.h
 libconfigproxy_la_CFLAGS = $(AM_CFLAGS)
 libconfigproxy_la_CXXFLAGS = $(AM_CXXFLAGS)
 
-libnetworkprefs_la_SOURCES = networkprefs.cc networkprefs.h inifile.h
+libnetworkprefs_la_SOURCES = networkprefs.cc networkprefs.h inifile.h guard.hh
 libnetworkprefs_la_CFLAGS = $(AM_CFLAGS)
 libnetworkprefs_la_CXXFLAGS = $(AM_CXXFLAGS)
 
