unit tests: Split register tests into multiple files.
There was just too much of it in a single file. Compilation took too
long, and future porting to doctest becomes easier this way.

Change-Id: I5a35a04b3b0be9703ab5c69fb47c137f29aff4be

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -49,7 +49,7 @@ dcpd_SOURCES = \
     connman_address.hh \
     connman_technology_registry.hh connman_property_cache.hh \
     network_device.hh network_device_list.hh \
-    stream_id.h plainplayer.hh coverart.hh gvariantwrapper.hh md5.hh \
+    stream_id.h stream_id.hh plainplayer.hh coverart.hh gvariantwrapper.hh md5.hh \
     dbus_common.c dbus_common.h \
     dbus_iface.cc dbus_iface.hh dbus_iface_deep.h \
     dbus_handlers.h dbus_handlers_connman_agent.hh connman_agent.h \
