mediaservices: Replace bad XML escaper by an improved version.
The new version works directly on std::ostream and doesn't use
preallocated, size-limited, static buffers. Also, the code which uses
the new XmlEscape class is much more readable.

Change-Id: I75a82dcad6daacd10b886627179b6027fb30ba39

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -130,7 +130,7 @@ libregisters_la_SOURCES = \
     dcpregs_audiopaths.cc dcpregs_audiopaths.hh \
     dcpregs_playstream.cc dcpregs_playstream.hh \
     dcpregs_stream_speed.cc dcpregs_stream_speed.hh \
-    dcpregs_mediaservices.cc dcpregs_mediaservices.hh \
+    dcpregs_mediaservices.cc dcpregs_mediaservices.hh xmlescape.hh \
     dcpregs_searchparameters.cc dcpregs_searchparameters.hh \
     dcpregs_datetime.cc dcpregs_datetime.hh \
     dcpregs_system_update.cc dcpregs_system_update.hh dcpregs_system_update_json.hh \
