--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -1987,6 +1987,7 @@ INCLUDE_FILE_PATTERNS  =
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
 PREDEFINED             = \
+    GLIB_CHECK_VERSION \
     DE_TAHIFI_LISTS_ERRORS_ENUM_NAME:=ListError::Code \
     DE_TAHIFI_LISTS_ERRORS_ENUM_VALUE(V):=V \
     DE_TAHIFI_ARTCACHE_READ_ERRORS_ENUM_NAME:=ArtCache::ReadError::Code \
@@ -2001,7 +2002,7 @@ PREDEFINED             = \
 # definition found in the source code.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-EXPAND_AS_DEFINED      =
+EXPAND_AS_DEFINED      = GLIB_CHECK_VERSION
 
 # If the SKIP_FUNCTION_MACROS tag is set to YES then doxygen's preprocessor will
 # remove all references to function-like macros that are alone on a line, have
