--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -1958,6 +1958,7 @@ INCLUDE_FILE_PATTERNS  =
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
 PREDEFINED             = \
+    DOXYGEN \
     GLIB_CHECK_VERSION \
     DE_TAHIFI_LISTS_ERRORS_ENUM_NAME:=ListError::Code \
     DE_TAHIFI_LISTS_ERRORS_ENUM_VALUE(V):=V \
